fix: broken layout on people search page for mobile devices (#1179)

--- a/frontend/static/css/components/people.css
+++ b/frontend/static/css/components/people.css
@@ -83,8 +83,9 @@
 
     @media only screen and (max-width : 570px) {
         .people-wrapper {
-            grid-template-columns: auto;
-            grid-template-rows: 100px 250px auto;
+            grid-template-columns: 100%;
+            grid-template-rows: auto;
+            margin: 10px;
         }
 
         .people-title {
@@ -94,22 +95,34 @@
         .people-search {
             grid-column-start: 1;
             grid-column-end: 2;
-            grid-row-start: 1;
-            grid-row-end: 2;
+            grid-row-start: auto;
+            grid-row-end: auto;
         }
 
-        .people-filters {
-            grid-column-start: 1;
-            grid-column-end: 2;
-            grid-row-start: 3;
-            grid-row-end: 4;
-        }
+            .people-filters-group {
+                display: none;
+            }
+
+            .people-filters-group.visible {
+                margin-top: 40px;
+                display: block;
+            }
+
+            .people-search-text {
+                max-width: 100%;
+                margin-right: 0;
+            }
+
+            .people-search-country,
+            .people-search-country > select {
+                width: 100%;
+            }
 
         .people-results {
             grid-column-start: 1;
             grid-column-end: 2;
-            grid-row-start: 4;
-            grid-row-end: 5;
+            grid-row-start: auto;
+            grid-row-end: auto;
         }
     }
 
@@ -135,6 +148,7 @@
     @media only screen and (max-width : 570px) {
         .people-map {
             padding-top: 0;
+            position: relative;
         }
 
         .people-map-container,
@@ -191,6 +205,14 @@
     border-radius: var(--block-border-radius);
     width: 100%;
 }
+
+    @media only screen and (max-width : 570px) {
+        .people-filters {
+            grid-row-start: auto;
+            grid-row-end: auto;
+        }
+    }
+
 
 
     .people-filters-title {
@@ -263,6 +285,17 @@
         font-size: 120%;
         margin-top: 50px;
         margin-bottom: 70px;
+    }
+
+    @media only screen and (max-width : 570px) {
+        .people-filters-header {
+            padding: 40px 0 20px;
+        }
+
+        .people-filters-button {
+            margin-top: 10px;
+            margin-bottom: 30px;
+        }
     }
 
 .people-stats {
